<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.RegisterActivity"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#ff663366">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <EditText android:id="@+id/et_register_full_name"
              android:hint="@string/label_full_name"
              android:background="#fff"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="120dp"
              android:textSize="20sp"
              android:padding="5dp"/>

    <EditText android:id="@+id/et_register_email"
              android:hint="@string/label_email_address"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:background="#fff"
              android:textSize="20sp"
              android:padding="5dp"
            />

    <EditText android:id="@+id/et_register_university"
              android:hint="@string/label_university_organization"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:background="#fff"
              android:textSize="20sp"
              android:padding="5dp"
            />


    <EditText android:id="@+id/et_register_password"
              android:hint="@string/label_password"
              android:inputType="textPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:background="#fff"
              android:textSize="20sp"
              android:padding="5dp"
            />

    <EditText android:id="@+id/et_register_confirm_password"
              android:inputType="textPassword"
              android:hint="@string/label_confirm_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:background="#fff"
              android:textSize="20sp"
              android:padding="5dp"
            />

    <Button android:id="@+id/btn_register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />

</LinearLayout>
