<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/dash_home"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".feature.DashActivity">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:src="@drawable/binar_partner"
                android:contentDescription="@string/label_app_icon"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/label_welcome_to_binar_app"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center">

            <Button
                    android:id="@+id/btn_dash_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:text="@string/label_login"/>

            <Button
                    android:id="@+id/btn_dash_register"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_register"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>