<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/DarkPurple"
        android:padding="20dp"
        tools:context=".feature.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    <EditText
            android:id="@+id/et_login_email"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:padding="5dp"
            android:hint="@string/label_email_address"/>

    <EditText
            android:id="@+id/et_login_password"
            android:layout_marginTop="25dp"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:padding="5dp"
            android:hint="@string/label_password"/>

    <Button
            android:id="@+id/btn_log_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="end"
            android:text="@string/label_login"/>
</LinearLayout>
